--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Outfit', sans-serif;
+    font-size: 10px;
 }
 :root{
     --White: hsl(0, 0%, 100%);
@@ -12,7 +13,53 @@
     --DarkBlue: hsl(218, 44%, 22%);
 }
 html , body{
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background: var(--LightGray);
+}
+.card{
+    background: var(--White);
+    min-height: 50rem;
+    width: 32rem;
+    padding: 1.5rem;
+    border-radius: 1.5rem;
+    margin: 0 auto;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+}
+.qrCode{
+    width:100%;
+    height: 30rem;
+}
+.qrCode img{
+    width: 100%;
+    height: 100%;
+    border-radius: 1.5rem;
+}
+.cardDetail h1{
+    padding:  2rem 1.5rem ;
+    font-size: 2rem;
+    word-spacing: 0.3rem;
+    text-align: center;
+    color: var(--DarkBlue)
+}
+
+.cardDetail p{
+    color: var(--GrayishBlue);
+    font-size: 1.5rem;
+    padding: 0 1.5rem;
+    text-align: center;
+}
+
+@media screen and (max-width : 375px) {
+    .card{
+        width: 90%;
+        margin: 0 auto;
+        min-height: 80%;
+    }
+
+    .cardDetail p{
+        
+    }
 }
