--- a/style.css
+++ b/style.css
@@ -52,12 +52,14 @@ html , body{
     text-align: center;
 }
 .myCode{
-    width:30%;
-    border:solid;
+    width:32rem;
     position: relative;
-    top: 80%;
-    left: 40%;
+    top: 27%;
+    border:solid;
+    text-align:center;
+    margin: 0 auto;
 }
+
 
 @media screen and (max-width : 375px) {
     .card{
@@ -66,5 +68,9 @@ html , body{
         min-height: 40%;
         padding-bottom: 3rem;
     }
-
+.myCode{
+    width:90%;
+    margin:0 auto;
+    left:1%;
+}
 }
