--- a/style.css
+++ b/style.css
@@ -1,23 +1,27 @@
-@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap");
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Outfit', sans-serif;
+    font-family: "Outfit", sans-serif;
     font-size: 10px;
 }
-:root{
+
+:root {
     --White: hsl(0, 0%, 100%);
     --LightGray: hsl(212, 45%, 89%);
     --GrayishBlue: hsl(220, 15%, 55%);
     --DarkBlue: hsl(218, 44%, 22%);
 }
-html , body{
+
+html,
+body {
     height: 100vh;
     width: 100%;
     background: var(--LightGray);
 }
-.card{
+
+.card {
     background: var(--White);
     min-height: 50rem;
     width: 32rem;
@@ -28,48 +32,51 @@ html , body{
     top: 50%;
     transform: translateY(-50%);
 }
-.qrCode{
-    width:100%;
+
+.qrCode {
+    width: 100%;
     height: 30rem;
 }
-.qrCode img{
+
+.qrCode img {
     width: 100%;
     height: 100%;
     border-radius: 1.5rem;
 }
-.cardDetail h1{
-    padding:  2rem 1.5rem ;
+
+.cardDetail h1 {
+    padding: 2rem 1.5rem;
     font-size: 2rem;
     word-spacing: 0.3rem;
     text-align: center;
-    color: var(--DarkBlue)
+    color: var(--DarkBlue);
 }
 
-.cardDetail p{
+.cardDetail p {
     color: var(--GrayishBlue);
     font-size: 1.5rem;
     padding: 0 1.5rem;
     text-align: center;
 }
-.myCode{
+
+.myCode {
     position: relative;
-    top: 27%;
-    text-align:center;
+    top: 20%;
+    text-align: center;
     margin: 0 auto;
     font-size: 1.5rem;
 }
 
-
-@media screen and (max-width : 375px) {
-    .card{
+@media screen and (max-width: 375px) {
+    .card {
         width: 90%;
         margin: 0 auto;
         min-height: 40%;
         padding-bottom: 3rem;
     }
-    .myCode{
-        width:90%;
-        margin:0 auto;
-        left:1%;
+    .myCode {
+        width: 90%;
+        margin: 0 auto;
+        left: 1%;
     }
 }
